# golden-audio-juce

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
examples/simple_synth/: CMakeLists.txt  README.md  SimpleSynth.h  SimpleSynthTest.cpp
include/golden_audio/: GoldenAudioTestBase.h
